# ruskin

./: .gitignore  CODEOWNERS  README.md
backend/: pyproject.toml
backend/server/: gpt_contexts.py  gpt_functions.py  server.py
frontend/: package-lock.json  package.json
frontend/app/: components.tsx  globals.css  page.tsx
